--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,31 @@
-i
+!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css&quot; rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Meu portfólio</title>
+</head>
+
+<body>
+    <header class="container text-center">
+    <img src="img/avatar1.png" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
+    <p class="lead">Nós somos Maria e Emanoeli</p>
+    <h1>Nós estudamos Programação e Pensamento Computacional</h1>
+    <p>Somos estudantes do Ensino Médio no Colégio Dr. Claudino dos Santos </p>
+    <p>Minhas habilidades</p>
+    <div>
+        <p class="badge bg-secondary"">Grêmio</p>
+        <p class="badge bg-secondary">Flamengo</p>
+        <p class="badge bg-secondary">Através da minha janela</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js&quot;
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    </header>
+</body>
+
+</html>
