--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-    <img src="img/avatar1.png" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
+    <img src="Img/avatar.jpg" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
     <p class="lead">Nós somos Maria e Emanoeli</p>
     <h1>Nós estudamos Programação e Pensamento Computacional</h1>
     <p>Somos estudantes do Ensino Médio no Colégio Dr. Claudino dos Santos </p>
