--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-    <img src="Img/avatar.jpg" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
+    <img src="Img/perfil.webp" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
     <p class="lead">Nós somos Maria e Emanoeli</p>
     <h1>Nós estudamos Programação e Pensamento Computacional</h1>
     <p>Somos estudantes do Ensino Médio no Colégio Dr. Claudino dos Santos </p>
@@ -27,7 +27,7 @@
         crossorigin="anonymous"></script>
     </header>
     <main class="container mt-5">
-        <h2> Meus Projetos </h2>
+        <h2> Minhas Habilidades </h2>
         <div class="row">
         <!-- Projeto 1 -->
         <div class="col-md-4">
