--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <!-- Projeto 1 -->
         <div class="col-md-4">
         <div class="card">
-        <img src="..." class="card-img-top" alt="..." />
+        <img src="Img/gremio.jpeg" class="card-img-top" alt="..." />
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Grêmio</h5>
         <p class="card-text">
         Some quick example text to build on the card title and make up the
         bulk of the card's content.
