--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="card-body">
         <h5 class="card-title">Grêmio</h5>
         <p class="card-text">
-        É um time de futebol, fundado em 15 de setembro de 1903 em Porto Alegre. ganhou vários títulos como Brasileirão, 
-        Copa do Brasil, Libertadores, Mundial e vários Gaúchos. Suas cores são azul, preto e branco.
+        É um time de futebol fundado em 15 de setembro de 1903 em Porto Alegre, ganhou vários títulos como Brasileirão,
+         Copa do Brasil, Libertadores, Mundial e vários Gaúchos. Suas cores são azul, preto e branco.
         </p>
         <button type="button" class="btn btn-link">Confira</button>
         </div>
