--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"; rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" ; rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
@@ -12,38 +12,67 @@
 
 <body>
     <header class="container text-center">
-    <img src="Img/perfil.webp" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
-    <p class="lead">Nós somos Maria e Emanoeli</p>
-    <h1>Nós estudamos Programação e Pensamento Computacional</h1>
-    <p>Somos estudantes do Ensino Médio no Colégio Dr. Claudino dos Santos </p>
-    <p>Minhas habilidades</p>
-    <div>
-        <p class="badge bg-secondary"">Grêmio</p>
-        <p class="badge bg-secondary">Flamengo</p>
-        <p class="badge bg-secondary">Através da minha janela</p>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <img src="Img/perfil.webp" alt="avatar do Ezequiel" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">Nós somos Maria e Emanoeli</p>
+        <h1>Nós estudamos Programação e Pensamento Computacional</h1>
+        <p>Somos estudantes do Ensino Médio no Colégio Dr. Claudino dos Santos </p>
+        <p>Minhas habilidades</p>
+        <div>
+            <p class="badge bg-secondary"">Grêmio</p>
+        <p class=" badge bg-secondary">Flamengo</p>
+            <p class="badge bg-secondary">Através da minha janela</p>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ;
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     </header>
     <main class="container mt-5">
         <h2> Minhas Habilidades </h2>
         <div class="row">
-        <!-- Projeto 1 -->
-        <div class="col-md-4">
-        <div class="card">
-        <img src="Img/gremio.jpeg" class="card-img-top" alt="..." />
-        <div class="card-body">
-        <h5 class="card-title">Grêmio</h5>
-        <p class="card-text">
-        É um time de futebol fundado em 15 de setembro de 1903 em Porto Alegre, ganhou vários títulos como Brasileirão,
-         Copa do Brasil, Libertadores, Mundial e vários Gaúchos. Suas cores são azul, preto e branco.
-        </p>
-        <button type="button" class="btn btn-link">Confira</button>
-        </div>
-        </div>
-        </div>
-        </main>
+            <!-- Projeto 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Img/gremio.jpeg" class="card-img-top" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Grêmio</h5>
+                        <p class="card-text">
+                            É um time de futebol fundado em 15 de setembro de 1903 em Porto Alegre, ganhou vários
+                            títulos como Brasileirão,
+                            Copa do Brasil, Libertadores, Mundial e vários Gaúchos. Suas cores são azul, preto e branco.
+                        </p>
+                        <button type="button" class="btn btn-link">Confira</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Img/flamengo.jpg" class="card-img-top" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Flamengo</h5>
+                        <p class="card-text">
+                            É um time de futebol brasileiro fundado em 15 de novembro de 1895, ganhou vários
+                            títulos como Brasileirão,
+                            Copa do Brasil, Libertadores, Mundial e vários cariocas/guanabara. conhecido como rubro negros por suas cores vermelho e preto.
+                             tem a maior torcida do mundo com mais de 40 milhões de torcedores.
+                        </p>
+                        <button type="button" class="btn btn-link">Confira</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Img/poster-atraves-da-minha-janela-2022.jpg" class="card-img-top" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Através da minha janela</h5>
+                        <p class="card-text">
+                            É um filme de romance da Netflix, lançado em 2022, retrata o romance entre Raquel e Ares. Esse filme foi baseado no livro da autora Ariana Godoy.
+                        </p>
+                        <button type="button" class="btn btn-link">Confira</button>
+                    </div>
+                </div>
+            </div>
 </body>
 
 </html>
