--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <footer class="container py-5">
 <h2>Entre em contato</h2>
 <div>
-<a href="https://github.com/mariastaudt">GitHub</a&gt;
+<a href="https://github.com/mariastaudt">GitHub</a>;
 </div>
 <p class="my-5 text-center">© Copyright 2025. Produzido por Maria C. Staudt</p>
 </footer>
